examples/test/testpolicy10257.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10257
  namespace: namespace452
spec:
  podSelector:
    matchLabels:
      key49: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value31
          key5: value34
          key27: value37
      podSelector:
        matchLabels:
          key44: value34
